<resources>
    <string name="app_name">NeWork</string>
    <string name="hello">Welcome!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="add_job">Add job</string>
    <string name="add_event">Add event</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts here yet.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="server_problems">Something went wrong. Server problems</string>
    <string name="repeat">Do you want to repeat?</string>
    <string name="error_network">error_network</string>
    <string name="error_unknown">error_unknown</string>
    <string name="error_db">error_db</string>
    <string name="news">Recent entries</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_save">Save</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in to the system</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 8 symbols</string>
    <string name="login_failed">No users with this login registered</string>
    <string name="All_fields">All fields must be filled</string>
    <string name="To_continue">Log in to continue</string>
    <string name="name_user">User name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_not_match">Password is wrong</string>
    <string name="post_content">Text %1$s</string>
    <string name="notification_user_published_post">User %1$s published new post:</string>
    <string name="feed_of_posts">Posts</string>
    <string name="feed_of_jobs">Jobs</string>
    <string name="feed_of_events">Events</string>
    <string name="video">Video</string>
    <string name="job_period">Work period</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="name_author">Human Human</string>
    <string name="geo">Coordinates</string>
    <string name="link">Link</string>
    <string name="photo_video">Photo or Video</string>
    <string name="description_add_menu" translatable="false">add menu</string>
    <string name="mention">Mention</string>
    <string name="add">Add</string>
    <string name="speakers">Speakers</string>
    <string name="date">Date</string>
    <string name="name_of_the_organization">Name of the organization</string>
    <string name="position">Position</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="addGeo">Add geodata?</string>
    <string name="add_avatar">Add avatar</string>
    <string name="camera">Open camera</string>
    <string name="image">Add from Gallery</string>
    <string name="delete">Delete</string>
    <string name="not_registered">The user is not registered</string>
    <string name="audio">Audio</string>
    <string name="images">Image</string>
    <string name="first_three">The first three fields are required</string>
    <string name="content">Content</string>
    <string name="content_field">The content field is required</string>
    <string name="leave_the_app">Are you sure you want to leave the app?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="problem_loading">Data downloading from server failed. Try later</string>
    <string name="need_permission">Location permission required</string>
    <string name="which_mention">Which of the users should I mention?</string>
    <string name="list_of_mentioned">List of mentioned users</string>
    <string name="be_lost">All changes will be lost if you exit</string>
    <string name="exit">exit</string>
    <string name="mention_anyone">User did not mention anyone</string>
    <string name="you_are_where">You are where you need to be</string>
    <string name="save_changes">Save changes</string>
    <string name="upscale">upscale</string>
    <string name="downscale">downscale</string>
    <string name="get_location">get location</string>
</resources>