<?xml version="1.0" encoding="utf-8"?>
<com.yandex.mapkit.mapview.MapView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.netology.nework.fragment.MapFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/enlarged_spacing"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="24dp"
            android:checkable="false"
            app:layout_constraintBottom_toTopOf="@id/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_zoom_in_24"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/upscale"
            android:backgroundTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@id/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_zoom_out_24"
            android:contentDescription="@string/downscale"
            android:backgroundTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="48dp"
            android:clickable="true"
            android:contentDescription="@string/get_location"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_location_24"
            android:backgroundTint="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.yandex.mapkit.mapview.MapView>