<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.netology.nework.fragment.NewPostFragment">


    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_anchor="@+id/edit"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/content"
        app:layout_constraintTop_toBottomOf="@+id/mentionIds"
        android:autoLink="web"
        android:linksClickable="true"
        android:autofillHints="Print something" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mentionIds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_ids"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/double_spacing"
        android:clickable="true"
        android:contentDescription="@string/add_post"
        android:focusable="true"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_check_24"
        android:backgroundTint="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuAdd"
        style="@style/Widget.AppTheme.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="8dp"
        android:contentDescription="@string/description_add_menu"
        android:checkable="true"
        app:icon="@drawable/ic_add_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mentionAdd"
        style="@style/Widget.AppTheme.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="8dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/description_add_menu"
        app:icon="@drawable/ic_mention_24"
        android:checkable="true"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/geoAdd"
        style="@style/Widget.AppTheme.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="100dp"
        android:paddingBottom="8dp"
        android:contentDescription="@string/description_add_menu"
        android:checkable="true"
        app:icon="@drawable/ic_add_location_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/linkAdd"
        style="@style/Widget.AppTheme.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="150dp"
        android:paddingBottom="8dp"
        android:checkable="true"
        android:contentDescription="@string/description_add_menu"
        app:icon="@drawable/ic_add_link_24" />

    <ImageView
        android:id="@+id/image"
        android:checkable="true"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:paddingEnd="64dp"
        android:layout_gravity="bottom|right"
        tools:ignore="RtlHardcoded,RtlSymmetry" />



    <EditText
        android:id="@+id/editLink"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:inputType="textPostalAddress"
        android:layout_gravity="bottom"
        android:layout_marginBottom="95dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/okAdd"
        android:layout_width="100dp"
        android:layout_height="@dimen/ava_size"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="100dp"
        android:text="@string/add"
        android:visibility="gone"
        android:textSize="11sp"
         />

</androidx.coordinatorlayout.widget.CoordinatorLayout>