<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing">


        <ImageView
            android:id="@+id/image"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/ic_baseline_work_24"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nameOrganization"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />


        <TextView
            android:id="@+id/nameOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/nameOrganization" />

        <TextView
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="@sample/posts.json/data/position" />


        <TextView
            android:id="@+id/link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.5"
            android:minHeight="@dimen/enlarged_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/position"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@sample/posts.json/data/link" />

        <TextView
            android:id="@+id/jobPeriodFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/from"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link" />

        <TextView
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintStart_toEndOf="@id/jobPeriodFrom"
            app:layout_constraintTop_toBottomOf="@id/link"
            tools:text="@sample/posts.json/data/published" />

        <TextView
            android:id="@+id/jobPeriodTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/to"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/link" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintStart_toEndOf="@id/jobPeriodTo"
            app:layout_constraintTop_toBottomOf="@id/link"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppTheme.IconButton"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
